# dotfiles

./: .dockerignore  .gitignore  .gitmodules  .luacheckrc  .luarc.json  .sops.yaml  README.markdown  README.md  Rakefile  Xmodmap  ackrc  ansible.cfg  apply-system.sh  apply-user.sh  environment.yml  flake.nix  gitignore  gruvbox-colors.env  i3blocks.conf  initial-setup.sh  install.sh  irbrc  karabiner.xml  lightdm-gtk-greeter.conf  pentadactylrc  post.sh  psqlrc  railsrc  screenrc  setup.sh  slate.js  sshrc  stylua.toml  taskrc  test.sh  tmux.conf  update.sh  vendor-update.sh  vimrc  xinitrc  (+5 more)
Xresources.d/: gruvbox-dark.xresources  gruvbox-urxvt256.xresources  mange-urxvt.xresources  xft.xresources
ansible/: environment.yml  requirements.yml  setup.sh  variables.yml
bootstrap/: bootstrap.sh  bootstrap.yml
callbacks/: anstomlog.py
compton/: compton.conf
config/: .gitignore  kglobalshortcutsrc  locale.conf  redshift.conf  user-dirs.dirs  xdg_zealotry
dotfiles/: Cargo.toml
dotfiles-cli/: Cargo.toml
dotfiles-cli/src/: files.rs  logger.rs  main.rs  manifest.pest  manifest.rs  state.rs  target.rs
dotfiles-cli/src/command/: cleanup.rs  install.rs  mod.rs  self_update.rs
fonts/: 10-symbols.conf  90-fallbacks.conf  Makefile
home/: android-dev.nix  default.nix  neovim.nix  shell.nix  utils.nix
i3/: config
i3blocks/: mediaplayer
keyboard/: .gitignore  Gemfile  Makefile  README.md  anne-pro-base.json  generate_overlay.rb  generate_screenshot.rb  hyper_overlay.yml  i3_bindings.rb  i3_overlay.yml  super_overlay.yml  wm_overlay.yml
mopidy/: .gitignore  (+1 more)
(+878 files in other folders)
